# personal_project_multi_vendor_API

./: .gitignore  main.py  pyproject.toml
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 0759cc0d06af_auto_creating_the_database.py  ca630fbe1064_changes_in_tables_in_created_at.py  f1fe95ac9ac7_adding_unique_constraint_in_products_in_.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  test_main.py  utils.py
app/routers/: auth.py  buyers.py  sellers.py  users.py
app/tests/: conftest.py  database.py  test_main.py
