[project]
name = "personal-project-the-multi-vendor-marketplace-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose==3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
